--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -30,6 +30,6 @@ jobs:
       - name: Push source to Gitee
         run: |
           git fetch --unshallow origin
-          git remote add gitee git@gitee.com:shiroha/cdn-images.git
+          git remote add gitee git@gitee.com:shiroha/cdn-font.git
           git fetch gitee
           git push -f gitee main
